--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
     <div class="header">
         <button id="add">Add</button>
     </div>
-    <form action="" method="get">
+    <form name="form" action="#" method="get">
         <div class="form-container">
             <div>
                 <label for="title">Title:</label>
-                <input type="text" name="title" id="title" maxlength="50">
+                <input type="text" name="title" id="title" maxlength="50"
+                    required>
             </div>
             <div>
                 <label for="author">Author:</label>
-                <input type="text" name="author" id="author" maxlength="50">
+                <input type="text" name="author" id="author" maxlength="50"
+                    required>
             </div>
             <div>
                 <label for="pages">Pages:</label>
                 <input type="number" name="pages" id="pages" min="0" max="13095"
-                    onkeyup=enforceMinMax(this)>
+                    required>
             </div>
             <div>
                 <label for="read">Finished:</label>
@@ -34,7 +36,7 @@
             </div>
             <div>
                 <button type="button" class="red">No</button>
-                <button type="button" class="green">Yes</button>
+                <button type="submit" class="green">Yes</button>
             </div>
         </div>
     </form>
