--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <div class="header">
         <button id="add">Add</button>
     </div>
-    <form name="form" action="#" method="get">
+    <form>
         <div class="form-container">
             <div>
-                <label for="title">Title:</label>
+                <label for="title">Title:*</label>
                 <input type="text" name="title" id="title" maxlength="50"
                     required>
             </div>
             <div>
-                <label for="author">Author:</label>
+                <label for="author">Author:*</label>
                 <input type="text" name="author" id="author" maxlength="50"
                     required>
             </div>
             <div>
-                <label for="pages">Pages:</label>
-                <input type="number" name="pages" id="pages" min="0" max="13095"
+                <label for="pages">Pages:*</label>
+                <input type="number" name="pages" id="pages" min="1" max="13095"
                     required>
             </div>
             <div>
@@ -36,7 +36,7 @@
             </div>
             <div>
                 <button type="button" class="red">No</button>
-                <button type="submit" class="green">Yes</button>
+                <button type="button" class="green">Yes</button>
             </div>
         </div>
     </form>
